Change in OauthDelegate to not create oauth for same linkedIn login and different userId Escape and Unescape function for data before JSON.parse and before dislpaying..

--- a/views/dashboard/memberEducation.jade
+++ b/views/dashboard/memberEducation.jade
@@ -83,5 +83,6 @@
 script.
     var memberId = '!{member.id}';
     var profileId = '!{profileId}';
-    var userEducation = JSON.parse( '!{JSON.stringify(userEducation)}' );
+    var userEducation = JSON.parse( '!{JSON.stringify(escapeObject(userEducation))}' );
+    var unEscapeObject = !{unEscapeObject};
 script(src='/js/app/dashboard/memberEducation.js')
