--- a/views/500.jade
+++ b/views/500.jade
@@ -1,9 +1,12 @@
 extends contextualHeader
 block content
-    h3 Oh No!
+    h3 Oops!
     div
-        | If you're reading this message, we've made a mistake. Please drop us a line at&nbsp;
-        a(href='mail:contact@searchntalk.com') contact@searchntalk.com
+        if error
+            strong #{error}
+        else
+            | If you're reading this message, we've made a mistake. Please drop us a line at&nbsp;
+            a(href='mail:contact@searchntalk.com') contact@searchntalk.com
         p
             a(href='javascript:history.back()') Go back
             | &nbsp;or&nbsp;
